[workspace]
members = [
  ".",
  "api",
  "lib",
  "proto",
  "scheduler",
  "dispatcher",
  "dto",
  "dto-core",
  "dto-derive",
  "migration",
  "clients/rust",
  "clients/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ahmed Farghal <me@asoli.dev>", "Mohamed Bassem <me@mbassem.com>"]
description = "Cronback Backend"
documentation = "https://docs.cronback.me"
rust-version = "1.68.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
axum = { version = "0.6.4", features = ["macros"] }
base64 = "0.21.0"
chrono = { version = "0.4", features = [
  "serde",
  "clock",
  "std",
], default-features = false }
chrono-tz = "0.8"
cron = "0.12"
derive_more = { version = "0.99.17" }
futures = "0.3.28"
iso8601-duration = "0.2.0"
metrics = "0.21"
prost = "0.11"
rand = "0.8"
sea-query = { version = "0", features = ["with-json"] }
sea-query-binder = { version = "0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-any",
  "runtime-tokio-native-tls",
  "with-json",
] }
sea-orm = { version = "0.11.3", features = ["chrono", "sqlx-sqlite", "macros", "debug-print"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.93" }
serde_with = { version = "3.0.0", features = ["chrono_0_4", "json"] }
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "any"] }
tempfile = "3.5"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.9"
tower = { version = "0.4"}
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
ulid = { version = "1.0" }
validator = { version = "0.16.0", features = ["derive"] }


[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = true

[package]
name = "cronbackd"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Internal Dependencies
api = { path = "api" }
dispatcher = { path = "dispatcher" }
scheduler = { path = "scheduler" }
lib = { path = "lib" }

# Dependencies from workspace
anyhow = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true, features = ["signal", "macros"]}
tracing = { workspace = true }

# Unique Dependencies
clap = { version = "4", features = ["color", "derive"] }
colored = "2.0"
metrics-exporter-prometheus = { version = "0.12", features = ["async-runtime"] }
metrics-util = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"

[dev-dependencies]
proto = { path = "proto" }
tonic = { workspace = true }
