[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
shared = { path = "../shared" }
proto = { path = "../proto" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1.0.69"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
tracing = { version = "0.1", features = ["log"] }
tonic = "0.8"
prost = "0.11"
metrics = "0.20"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde_json = "1.0.93"
validator = { version = "0.16.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
cron = "0.12"
iso8601-duration = "0.2.0"
rand = "0.8"
serde_with = { version = "2.2.0", features = ["chrono_0_4", "json"] }
tower-http = { version = "0.4.0", features = ["tracing"] }
async-trait = "0.1.68"
sqlx = {version= "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
sha2 = "0.10.6"
base64 = "0.21.0"
uuid = { version = "1.2.2", features = ["v4"] }
