[package]
name = "api"
description = "API server for cronback backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
lib = { path = "../lib" }
proto = { path = "../proto" }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
iso8601-duration = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true}
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

# Unique Dependencies
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }
