[package]
name = "cronback-api-model"
description = """\
  A set of API models for [cronback](https://cronback.me) API protocol. \
  Cronback provides developers a reliable and flexible solution to schedule \
  one-time, recurring cron, and on-demand webhooks.
  """
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
categories = ["network-programming", "api-bindings"]
keywords = ["cron", "webhooks", "scheduler", "job", "periodic"]

[package.metadata.workspaces]
# We maintain version independently from the workspace.
independent = true

[features]
default = []
admin = []
client = []
dto = ["dep:proto", "dep:dto", "dep:lib"]
validation = [
  "dep:validator",
  "dep:lib",
  "dep:cron",
  "dep:ipext",
  "dep:thiserror",
  "dep:chrono-tz",
  "dep:url",
]
server = ["dto", "validation"]
clap = ["dep:clap"]

[dependencies]
# Internal Dependencies
dto = { workspace = true, optional = true }
lib = { workspace = true, optional = true }
proto = { workspace = true, optional = true }

validator = { version = "0.16.0", features = ["derive"], optional = true }
cron = { workspace = true, optional = true }
ipext = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"], optional = true }
chrono-tz = { workspace = true, optional = true }
clap = { version = "4", default-features = true, features = [
  "derive",
], optional = true }

monostate = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
anyhow = { workspace = true }
