[package]
name = "cronback-dto-derive"
description = "Data transfer object library for Cronback"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
# Internal Dependencies
dto-core = { path = "../cronback-dto-core", package = "cronback-dto-core", version = "0.1.0" }

proc-macro2 = "1.0"
syn = { version = "2.0" }
