[package]
name = "cronback-services"
description = "Internal crate for cronback gRPC services"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
# Internal Dependencies
cronback-api-model = { workspace = true, features = ["server"] }
dto = { workspace = true }
lib = { workspace = true }
proto = { workspace = true }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["chrono_0_4", "json"] }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-test = { workspace = true }
ulid = { workspace = true }
once_cell = { workspace = true }

# Unique Dependencies
async-recursion = { version = "1.0.4" }
axum-extra = { version = "0.7", features = ["query"] }
dashmap = { version = "5.5.0" }
hyper = "0.14.26"
names = { version = "0.14.0", default-features = false }
serde_path_to_error = "0.1.11"
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }
regex = { version = "1.9.1" }
sea-orm-migration = { version = "0.12", features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-native-tls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",              # `DATABASE_DRIVER` feature
  "sqlx-postgres",            # `DATABASE_DRIVER` feature
] }
