[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
shared = { path = "../shared" }
proto = { path = "../proto" }
uuid = { version = "1.2.2", features = ["v4"] }
chrono = "0.4"
serde = "1"
thiserror = "1"
anyhow = "1.0.69"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
tracing = { version = "0.1", features = ["log"] }
tonic = "0.8"
prost = "0.11"
