[package]
name = "dispatcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
lib = { path = "../lib" }
proto = { path = "../proto" }

# Dependencies from workspace
anyhow = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }

# Unique Dependencies
reqwest = "0.11"
