[package]
name = "dispatcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
lib = { path = "../lib" }
proto = { path = "../proto" }

# Dependencies from workspace
anyhow = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

# Unique Dependencies
reqwest = "0.11"
url = "2.3"
# A crate that re-exposes the unstable IP features that got introduced in
# https://github.com/rust-lang/rust/issues/27709.
# Given that this is an untrusted repo, we're pinning it to a particular
# revision after reviewing the code at this revision.
ipext = {git = "https://github.com/jedisct1/rust-ipext", rev="0ebeb115bd67"}