[package]
name = "dto-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "printing"] }
quote = "1.0"
darling = "0.20"

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
pretty_assertions = "1.3"
