[package]
name = "dto-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
# Internal Dependencies
dto-core = { path = "../dto-core" }

proc-macro2 = "1.0"
syn = { version = "2.0" }
