[package]
name = "dto-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
# Internal Dependencies
dto-core = { path = "../dto-core", version = "0.1.0" }

proc-macro2 = "1.0"
syn = { version = "2.0" }
