[package]
name = "dto"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
# Internal dependencies
dto-derive = { path = "../dto-derive", version = "0.1.0" }
dto-core = { path = "../dto-core", version = "0.1.0" }

once_cell = "1.17"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
