[package]
name = "dto_helpers"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
proc-macro2 = "1.0"
syn = {version = "2.0", features = ["extra-traits", "full"]}
quote = "1.0"
darling = "0.20"

[dev-dependencies]
trybuild = {version = "1.0", features = ["diff"]}
