[package]
name = "lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
proto = { path = "../proto" }
dto = { path = "../dto" }
migration = { path = "../migration" }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
iso8601-duration = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
validator = { workspace = true }

# Unique Dependencies
config = { version = "0.13", features = ["toml"] }
hyper = "0.14.24"
tonic-reflection = "0.9.0"
url = { version = "2.3.1", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
tracing-core = { version = "0.1.31" }
# A crate that re-exposes the unstable IP features that got introduced in
# https://github.com/rust-lang/rust/issues/27709.
# Given that this is an untrusted repo, we're pinning it to a particular
# revision after reviewing the code at this revision.
ipext = { git = "https://github.com/jedisct1/rust-ipext", rev = "0ebeb115bd67" }
