[package]
name = "lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
# Internal Dependencies
proto = { path = "../proto" }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
derive_more = { workspace = true }
iso8601-duration = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
ulid = { workspace = true }
validator = { workspace = true }

# Unique Dependencies
config = { version = "0.13", features = ["toml"] }
futures = "0.3.26"
hyper = "0.14.24"
metrics = "0.20"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_with = { version = "2.2.0", features = ["chrono_0_4", "json"] }
thiserror = "1.0.39"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.9.0"
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.3.1", features = ["serde"] }
valuable = { version = "0.1.0", features = ["derive"] }
monostate = { version = "0.1" }
# A crate that re-exposes the unstable IP features that got introduced in
# https://github.com/rust-lang/rust/issues/27709.
# Given that this is an untrusted repo, we're pinning it to a particular
# revision after reviewing the code at this revision.
ipext = {git = "https://github.com/jedisct1/rust-ipext", rev="0ebeb115bd67"}