[package]
name = "proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "proto"
path = "lib.rs"

[dependencies]
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dto = { path = "../dto" }

[build-dependencies]
tonic-build = "0.9"
