[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Internal Dependencies
lib = { path = "../lib" }
proto = { path = "../proto" }

# Dependencies from workspace
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }

# Unique Dependencies
# For integration tests
tempfile = "3.5"
tokio-stream = { version = "0.1", features = ["net"] }
