[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
scheduler = { path = "../scheduler" }
dispatcher = { path = "../dispatcher" }
api = { path = "../api" }
config-rs = "0.1.3"
chrono = "0.4.23"
