[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cronbackd"
path = "main.rs"

[dependencies]
shared = { path = "../shared" }
scheduler = { path = "../scheduler" }
dispatcher = { path = "../dispatcher" }
api = { path = "../api" }
chrono = "0.4"
config = { version = "0.13", features = ["toml"] }
clap = { version = "4", features = ["color", "derive"] }
serde = "1"
thiserror = "1"
anyhow = "1.0.69"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
tracing = { version = "0.1", features = ["log", "valuable"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
valuable = { version = "0.1.0", features = ["derive"] }
metrics = "0.20"
metrics-exporter-prometheus = { version = "0.11", features = ["async-runtime"] }
metrics-util = "0.14.0"
