[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4"
config = { version = "0.13", features = ["toml"] }
rand = "0.8"
uuid = { version = "1.2", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
valuable = { version = "0.1.0", features = ["derive"] }
anyhow = "1.0.69"
